# nautilus-code

./: .gitignore  README.md  meson.build  nautilus-code-module.c  nautilus-code.c  nautilus-code.h  nautilus-code.py  nautilus-code.py.in
.github/ISSUE_TEMPLATE/: bug_report.yml  editor_request.yml  other.md  translation_submission.yml
NautilusCode/: __init__.py  meson.build  program_list.py  types.py
po/: LINGUAS  POTFILES.in  cs.po  de.po  fr.po  hu.po  it.po  meson.build  nautilus-code.pot  oc.po  pt_BR.po  sv.po  tr.po  update-pot-file.sh  ur.po  zh_CN.po
